--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 body {}
 
 #banner {
-	width:100%;
+	width: 100%;
 }
 
-.principal{
+.principal {
 	background: #CCCCCC;
 	padding: 30px;
 }
@@ -18,6 +18,7 @@ body {}
 
 .titulo-principal {
 	padding-left: 20px;
+	height: 15vw;
 }
 
 .titulo-centralizado {
@@ -57,35 +58,29 @@ em strong {
 }
 
 header {
-  background: #BBBBBB;
-  padding: 20px 0;
+	background: #BBBBBB;
+	padding: 20px 0;
 }
 
 .caixa {
-  position: relative;
-  width: 940px;
-  margin: 0 auto;
-  padiding: 0 20px;
-  display: flex;
-  align-items: center ;
-  justify-content: space-between;
-}
-
-nav {
-  position: absolute;
-  top: 110px;
-  right: 0;
+	position: relative;
+	width: 940px;
+	margin: 0 auto;
+	padding: 0 20px;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
 }
 
 nav li {
-  display: inline;
-  margin: 0 0 0 15px;
+	display: inline;
+	margin: 0 0 0 15px;
 }
 
 nav a {
-  text-transform: uppercase;
-  color: #000000;
-  font-weight: bold;
-  font-size: 22px;
-  text-decoration: none;
+	text-transform: uppercase;
+	color: #000000;
+	font-weight: bold;
+	font-size: 22px;
+	text-decoration: none;
 }
