--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ nav a:hover {
 }
 
 .produtos li:active {
-    border-color: #088C19;    
+    border-color: #088C19;
 }
 
 .produtos h2 {
@@ -87,8 +87,9 @@ form {
     margin: 40px 0;
 }
 
-form label, form legend {
-    display:block;
+form label,
+form legend {
+    display: block;
     font-size: 20px;
     margin: 0 0 10px;
 }
@@ -124,7 +125,7 @@ footer {
 }
 
 .enviar {
-    width:40%;
+    width: 40%;
     padding: 15px 0;
     background: orange;
     color: white;
@@ -139,4 +140,19 @@ footer {
 .enviar:hover {
     background: darkorange;
     transform: scale(1.2);
+}
+
+table {
+    margin: 20px 0 40px;
+}
+
+thead {
+    background: #555555;
+    color: white;
+    font-weight: bold;
+}
+
+td, th {
+    border: 1px solid #000000;
+    padding: 8px 15px;
 }
