--- a/style.css
+++ b/style.css
@@ -151,11 +151,18 @@ main {
 }
 
 .itens:before {
-    content: "✔️";
+    content: "✓";
 }
 
 .imagem-beneficios {
     width: 60%;
+    opacity: 1;
+    transition: 400ms;
+    box-shadow: 10px 10px 10px 0 #000000;
+}
+
+.imagem-beneficios {
+    opacity: 0.3;
 }
 
 form {
